<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/enter_pin_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/TitleBar" android:background="@drawable/generic_header_bg" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/globalConnect" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <LinearLayout android:orientation="vertical" android:background="#ff151515" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textSize="16.0sp" android:id="@id/textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="12.0dip" android:text="@string/enterPinMakeSure" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="1.0">
            <EditText android:gravity="center" android:id="@id/field1" android:background="@drawable/enter_pin" android:layout_width="80.0dip" android:layout_height="45.0dip" android:layout_marginLeft="12.0dip" android:layout_marginRight="4.0dip" android:cursorVisible="false" android:editable="false" android:layout_weight="1.0" />
            <EditText android:gravity="center" android:id="@id/field2" android:background="@drawable/enter_pin" android:layout_width="80.0dip" android:layout_height="45.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:cursorVisible="false" android:editable="false" android:layout_weight="1.0" />
            <EditText android:gravity="center" android:id="@id/field3" android:background="@drawable/enter_pin" android:layout_width="80.0dip" android:layout_height="45.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:cursorVisible="false" android:editable="false" android:layout_weight="1.0" />
            <EditText android:gravity="center" android:id="@id/field4" android:background="@drawable/enter_pin" android:layout_width="80.0dip" android:layout_height="45.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="12.0dip" android:cursorVisible="false" android:editable="false" android:layout_weight="1.0" />
        </LinearLayout>
        <TextView android:textSize="16.0sp" android:id="@id/textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="20.0dip" android:text="@string/enterPinPasscode" />
    </LinearLayout>
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="230.0dip" android:layout_weight="1.0">
        <TableRow android:layout_weight="1.0">
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k1" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN1" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k2" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN2" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k3" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN3" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:layout_weight="1.0">
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k4" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN4" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k5" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN5" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k6" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN6" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:layout_weight="1.0">
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k7" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN7" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k8" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN8" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k9" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN9" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:layout_weight="1.0">
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/cancel" android:background="@drawable/enter_pin_numeric_button" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <Button android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/enter_pin_button_color" android:id="@id/k0" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/enterPinN0" android:layout_weight="1.0" />
            <ImageButton android:textColor="@color/enter_pin_button_color" android:id="@id/delete" android:background="@drawable/enter_pin_numeric_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/icon_enter_pin_delete" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
</LinearLayout>