<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/generic_screen_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/TitleBar" android:background="@drawable/generic_header_bg" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/globalLogitechCustomerSupport" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <TextView android:textSize="15.0sp" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/helpAssistance" />
    <LinearLayout android:orientation="horizontal" android:id="@id/launchcsLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
        <ImageView android:background="@drawable/bullet_dot" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" />
        <TextView android:textSize="15.0sp" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/helpLaunchCs" />
    </LinearLayout>
    <Button android:textSize="15.0sp" android:textColor="@drawable/dark_text_bright_selected" android:id="@id/launchcs" android:background="@drawable/btn_gradient_background" android:padding="9.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/helpLaunchCsBtn" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
        <ImageView android:background="@drawable/bullet_dot" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" />
        <TextView android:textSize="15.0sp" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/helpWeb" />
    </LinearLayout>
    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColorLink="#ff00a29b" android:id="@id/cssitetxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/helpCsUrl" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
        <ImageView android:background="@drawable/bullet_dot" android:layout_width="10.0dip" android:layout_height="10.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" />
        <TextView android:textSize="15.0sp" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/helpPhone" />
    </LinearLayout>
    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColorLink="#ff00a29b" android:id="@id/phonetxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/helpCsUrl" />
</LinearLayout>