<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/login_title" android:background="@drawable/activity_titlebar_bg" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/login_title" />
    <RelativeLayout android:gravity="center" android:layout_gravity="center" android:id="@id/loginView" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0dip" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/usernameLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/loginPass" />
        <TextView android:textSize="14.0dip" android:gravity="center_horizontal" android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/usernameLabel" />
        <EditText android:textSize="14.0dip" android:id="@id/password" android:layout_width="200.0dip" android:layout_height="wrap_content" android:hint="@string/loginActivityPassword" android:layout_below="@id/username" android:layout_centerHorizontal="true" android:inputType="textPassword" />
        <Button android:id="@id/login" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loginActivityLogin" android:layout_below="@id/password" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>