<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/generic_screen_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/TitleBar" android:background="@drawable/generic_header_bg" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/globalConnect" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <ImageView android:layout_gravity="center" android:id="@id/no_wifi" android:paddingTop="60.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/no_wifi_icon" />
    <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/TextView01" android:paddingTop="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noWifiConnection" />
    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/TextView02" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noWifiConnectionMessage" />
    <Button android:textColor="@drawable/dark_text_bright_selected" android:layout_gravity="center_horizontal" android:id="@id/no_wifi_button" android:background="@drawable/btn_gradient_background" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/globalOpenNetworkSettings" />
</LinearLayout>