<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/generic_screen_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/TitleBar" android:background="@drawable/generic_header_bg" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enterIpAddress" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enterIpString" />
    <EditText android:id="@id/edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enterIpSave" />
    <View android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
</LinearLayout>