<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/generic_screen_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/TitleBar" android:background="@drawable/generic_header_bg" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editUserDefinedPageTitle" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <com.logitech.harmonylink.context.view.UserDefinedPageView android:id="@id/UserDefinedPageView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_toRightOf="@id/FrameCustomButtons"
      xmlns:app="http://schemas.android.com/apk/res/com.logitech.harmonylink">
        <com.logitech.harmonylink.view.widget.dragdrop.DragLayer android:id="@id/drag_layer" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/control_bar" android:background="#ff000000" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <Button android:textSize="15.0sp" android:textColor="@drawable/dark_text_bright_selected" android:id="@id/cancel" android:background="@drawable/btn_gradient_background" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/globalCancel" />
                <Button android:textSize="15.0sp" android:textColor="@drawable/dark_text_bright_selected" android:id="@id/restore" android:background="@drawable/btn_gradient_background" android:layout_width="65.0dip" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/editUserDefinedPageRestore" />
                <com.logitech.harmonylink.view.widget.dragdrop.DeleteZone android:textSize="15.0sp" android:textColor="#ffcccccc" android:gravity="center" android:id="@id/delete_zone" android:background="@drawable/delete_zone_selector" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/editUserDefinedPageRemove" android:drawableLeft="@drawable/trash_can" android:layout_weight="1.0" />
                <Button android:textSize="15.0sp" android:textColor="@drawable/dark_text_bright_selected" android:id="@id/done" android:background="@drawable/btn_gradient_background" android:layout_width="60.0dip" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/globalDone" />
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/help_label" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editUserDefinedPageInstruction" android:lines="2" android:layout_below="@id/control_bar" />
        </com.logitech.harmonylink.view.widget.dragdrop.DragLayer>
    </com.logitech.harmonylink.context.view.UserDefinedPageView>
    <ImageView android:layout_width="wrap_content" android:layout_height="60.0dip" android:src="@drawable/fake_primary_controls"
      xmlns:android="http://schemas.android.com/apk/res/android" />
</LinearLayout>